Add support for generics
- Add initial support for generics.
- Refactor types to ./types.ts
- Remove when, properties that are undefined already get removed when serializing to json.
- Json-output satifies Type[] so we can do some type-checking on the output

--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "readmi",
-  "module": "index.ts",
+  "name": "@bigmistqke/readmi",
+  "author": "@bigmistqke",
   "type": "module",
   "scripts": {
-    "parse-test": "cd src/test && bun build.ts && cd .. && bun parse-dts.ts test/dist/test.d.ts"
+    "readmi": "cd src/test && bun build.ts && cd .. && bun readmi.ts test/dist/test.d.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "bun-plugin-dts": "^0.2.3"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vite-plugin-solid": "^2.10.2",
+    "solid-js": "^1.8.17"
   },
   "dependencies": {
     "jsdoc-to-markdown": "^8.0.1",
     "shiki": "^1.5.1",
-    "solid-js": "^1.8.17",
     "typescript": "^5.4.5",
-    "vite": "^5.2.11",
-    "vite-plugin-solid": "^2.10.2"
+    "vite": "^5.2.11"
   }
 }
